Fix button text alignment

--- a/style.css
+++ b/style.css
@@ -85,12 +85,12 @@ h1{
     cursor: pointer;
     flex: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
-    height: 140px;
+    height: 160px;
     justify-content: space-around;
     padding: 20px;
-    width: 140px;
+    width: 160px;
 }
 
 .result-container{
